# eva-api

./: .coverage  .dockerignore  .env  .env.example  .env.production  .eva-housekeeping.json  .eva-manifest.json  .eva-memory.json  .eva-pod.yaml  .eva-production-status.json  .gitignore  ACTION-PLAN-20251209-CORRECTED.md  ACTION-PLAN-20251209.md  ACTION-PLAN.md  AZURE-CREDENTIAL-GUIDE.md  AZURE-INTEGRATION-VERIFICATION-20251209.md  AZURE-LOAD-TEST-RESULTS.md  DEEP-ASSESSMENT-20251209.md  DELIVERY-GRAPHQL-FIX-COMPLETE.md  Dockerfile  FINAL-REPORT-EVA-API.md  FIND-ENTRA-SECRET.md  PARALLEL-IMPLEMENTATION-COMPLETE.md  PATH-C-COMPLETE.md  PERFORMANCE-FIX-STATUS.md  PHASE-1-COMPLETION-REPORT.md  PHASE-2-COMPLETION.md  PHASE-3-COMPLETION.md  PHASE-3-QUICK-REFERENCE.md  PRODUCTION-DEPLOYMENT-QUICK-START.md  PRODUCTION-DEPLOYMENT-STATUS.md  PRODUCTION-READINESS-ROADMAP.md  PROJECT-STATUS.md  QUALITATIVE-ASSESSMENT.md  RAG-PRODUCTION-IMPLEMENTATION-ASSESSMENT.md  README.md  SCRUM-MASTER-REPORT.md  bootstrap-production.ps1  check-pod-deliverables.ps1  check_azure_connectivity.py  (+38 more)
.azure/: config
.eva/: .eva-workspace.schema.json  production-status.json
.github/: copilot-instructions.md
chat-ui/: .env.production  DEMO-TRANSFORMATION-PLAN.md  README.md  THREE-CONCEPTS-COMPLIANCE.md  THREE-CONCEPTS-FIX-REPORT.md  demo-data.json  deploy-to-azure.ps1  deploy-with-sessions.ps1  index-backup.html  index-original-backup.html  index-with-sessions.html  index.html  launch-demo.ps1
coverage/: index.html  lcov.info
deploy-package/: requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: APIM-COST-ATTRIBUTION-ESDC.md  APIM-DEMO-SANDBOX-SETUP.md  APIM-IMPLEMENTATION-ASSESSMENT.md  GRAPHQL-WEBSOCKET-TESTING.md  INTEGRATION-TESTING-GUIDE.md  PHASE-2-COMPLETION-REPORT.md  PHASE-2X-3-4-COMPLETION.md  PHASE-4-PLANNING.md  POD-D-DEPLOYMENT-RUNBOOK.md  POD-I-AZURE-AI-SEARCH-SETUP.md  POD-I-AZURE-SEARCH-INFRASTRUCTURE.md  POD-L-RAG-SERVICE-IMPLEMENTATION.md  POD-T-RAG-TEST-PLAN.md  PRODUCTION-DEPLOYMENT-CHECKLIST.md  SPECIFICATION.md  TESTING-STATUS.md  WEBHOOK-STORAGE-IMPLEMENTATION.md
load-tests/: EXECUTION-RESULTS.md  LOAD-TEST-ANALYSIS.md  README.md  check_sla.py  locustfile.py  report-azure-50users-v2.html  report-azure-50users-v3-REAL.html  report-azure-50users-v3.html  report-azure-50users-v4-FINAL.html  report-azure-50users.html  report-baseline.html  report-demo-final.html  report-demo.html  report-health.html  report-medium.html  report-mock-medium.html  report-quick-validation.html  results-azure-50users-v2_exceptions.csv  results-azure-50users-v2_failures.csv  results-azure-50users-v2_stats.csv  results-azure-50users-v2_stats_history.csv  results-azure-50users-v3-REAL_exceptions.csv  results-azure-50users-v3-REAL_failures.csv  results-azure-50users-v3-REAL_stats.csv  results-azure-50users-v3-REAL_stats_history.csv  results-azure-50users-v3_failures.csv  results-azure-50users-v3_stats.csv  results-azure-50users-v3_stats_history.csv  results-azure-50users-v4-FINAL_exceptions.csv  results-azure-50users-v4-FINAL_failures.csv  results-azure-50users-v4-FINAL_stats.csv  (+30 more)
src/: auth.ts  (+6 more)
(+264 files in other folders)
